tests/fixtures/syntax/invalid/document_file_missing_scope.repor
# A document block requires an explicit scope keyword after `document`.
document {
  title "no scope"
}
